--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-body{
-  background-color: red;
-  margin: 10px auto;
-  padding: 10px 0;
-  color: blue;
+html{
+ font-family: cursive;
+  font-size: 12px;
+  font-weight: bold;
 }
