adding color to the background and the text

--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ html{
   font-weight: bold;
 }
 
+body{
+    background-color: plum;
+    color: lime;
+}
+
+
 h1{
     color: pink;
     padding: 2px;
