--- a/style.css
+++ b/style.css
@@ -9,8 +9,13 @@ body{
     color: lime;
 }
 
-
 h1{
     color: pink;
     padding: 2px;
+}
+
+@media(max-width: 500px){
+ h1{
+  color: red;
+ }
 }
